# PythonTheory

./: README.md  goorm.manifest  pyproject.toml
(5-2)func_use/: Fibo_v2.py  list_flatten.py  quiz(1).py  test.py
(5-3)func_use_adv/: challenge_hanoi.py  file_open_close.py  generator.py  info.txt  info_reader_v2.py  next.txt  reference.py  writelines().py  writelines().txt
(6-1)syntax-runtime_error/: basic_error.py  try_except.py
adv_class/(7-1)standard_module/: math.py  module_os.py  module_sys.py  random_module.py
adv_class/(7-2)external_module/: module_beautifulsoup.py  module_flask.py  module_primePy.py
adv_class/(8-1)class_1/: object1.py
basic_class/(5-2)func_use/: Fibo.py  test.py
basic_class/(5-3)func_use_adv/: basic.txt  challenge_hanoi.py  check_quiz.py  file_reader.py  info_reader.py  randata_processing.py  tuple1.py
basic_class/(6-1)syntax-runtime_error/: conditional_error_process.py
basic_class/(6-2)syntax_runtime_error_adv/: except1.py
func_use/: test.py
