[tool.poetry]
name = "repl_python3_Hon-gong-pa"
version = "0.1.0"
description = ""
authors = ["whydothat <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
primePy = "^1.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
